@@ -1,4 +1,6 @@
-2010-05-31  Philippe Villiers <kissifrot@gmail.com>
+2010-11-29  Philippe Villiers <kissifrot@gmail.com>
+	* FIX bug #101 : Added support for PostgreSQL backup method (Thanks to
+	 Helios de Creisquer for the patch)
 	* FIX bugs #237 and #244
 	- fixes incremental backups for tar.lz
 	- fixes exclude patterns for tar.lz
